<resources>
    <string name="app_name">Acme Eletronics Shop</string>

    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_fiscal_number">Fiscal Number</string>
    <string name="hint_credit_card_type">Credit Card Type</string>
    <string name="hint_credit_card_number">Credit Card Number</string>
    <string name="hint_credit_card_validity">Credit Card Validity (mm/yy)</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_personal_info">Personal Information</string>
    <string name="text_validation_credentials">Validation Credentials</string>
    <string name="text_credit_card_info">Credit Card Information</string>

    <string name="credit_card_type_visa">Visa</string>
    <string name="credit_card_type_master_card">Master Card</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_address">Enter Valid Address</string>
    <string name="error_message_fiscal_number">Enter Valid Fiscal Number (9 digits)</string>
    <string name="error_message_credit_card_number">Enter Valid Credit Card Number (12 digits)</string>
    <string name="error_message_credit_card_validity">Enter Valid Credit Card Validity (mm/yy)</string>
    <string name="error_message_password">Enter Valid password (8 characters minimum)</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? <u>Create one</u></string>
    <string name="text_already_member">Already a member? <u>Login</u></string>
    <string name="action_settings">Settings</string>

    <string name="text_added_products">Added products</string>
    <string name="text_shopping_list">Shopping List</string>
    <string name="text_profile">Profile</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_detailed_order">Detailed Order</string>

    <string name="hint_name_product">Name</string>
    <string name="hint_price_product">Price</string>
    <string name="hint_quantity_product_label">Quantity</string>
    <string name="hint_quantity_product">Qtty</string>

    <string name="text_total">Total: </string>
    <string name="hint_total">0 €</string>
    <string name="text_pay">PAY</string>
    <string name="text_clear">CLEAR</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="navigation_drawer_icon_profile">Profile</string>
    <string name="navigation_drawer_icon_shopping_list">Shopping List</string>
    <string name="navigation_drawer_icon_history">History</string>
    <string name="navigation_drawer_icon_logout">Logout</string>

    <string name="profile_email">Email</string>
    <string name="profile_address">Address</string>
    <string name="profile_fiscal_number">Fiscal Number</string>

    <string name="transaction_order_id">Order ID</string>
    <string name="transaction_date">Date</string>
    <string name="item_product_remove">Remove Product</string>

    <string name="transaction_item_name">Name</string>
    <string name="transaction_item_quantity">Quantity</string>

    <string name="tetx_product_list">Product List</string>
    <string name="img_qr_code_description">QR Code</string>
    <string name="text_total_cost">Total cost</string>
    <string name="confirm">Confirm</string>
    <string name="quantity_default">1</string>

</resources>
