<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_profile"
            android:icon="@drawable/profile"
            android:title="@string/navigation_drawer_icon_profile" />
        <item android:id="@+id/nav_item_shopping_list"
            android:icon="@drawable/shopping_list_icon"
            android:title="@string/navigation_drawer_icon_shopping_list" />
        <item android:id="@+id/nav_item_history"
            android:icon="@drawable/history"
            android:title="@string/navigation_drawer_icon_history" />
        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/logout"
            android:title="@string/navigation_drawer_icon_logout" />
    </group>


</menu>