<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_detailed_order"
                android:textSize="20sp" />


        </android.support.v7.widget.LinearLayoutCompat>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_order_id"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginEnd="10dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtViewID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetx_product_list"
        android:textColor="@color/colorBackground"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTransactionItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</LinearLayout>