<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@color/black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/btnAddQuantity"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:srcCompat="@drawable/add_quantity" />

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="3"
                android:hint="@string/hint_quantity_product"
                android:text="@string/quantity_default"
                android:textAlignment="center"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@null"
                android:textSize="22sp" />



            <ImageButton
                android:id="@+id/btnRemoveProduct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:contentDescription="@string/item_product_remove"
                android:src="@drawable/delete_product" />




        </LinearLayout>

</android.support.v7.widget.CardView>